{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 204,
  "lineage": "bcc22c56-df3f-4eb7-46e9-26c476e210ef",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:security-group/sg-0efee43e2ed9f2a0e",
            "description": "Allow VPC traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efee43e2ed9f2a0e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08646e8645d4b712b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "orlando-private",
            "name_prefix": "",
            "owner_id": "890363476833",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "orlando-private"
            },
            "tags_all": {
              "Name": "orlando-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.main",
            "module.lb.aws_lb_listener.main",
            "module.lb.aws_lb_target_group.main",
            "module.lb.aws_security_group.load_balancer",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:890363476833:loadbalancer/app/orlando/49fc3c39c36e1cad",
            "arn_suffix": "app/orlando/49fc3c39c36e1cad",
            "desync_mitigation_mode": "defensive",
            "dns_name": "orlando-1129140907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:890363476833:loadbalancer/app/orlando/49fc3c39c36e1cad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "orlando",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08646e8645d4b712b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c072e7b0b96dc98"
              },
              {
                "subnet_id": "subnet-0e7f3082dd36e7e9c"
              }
            ],
            "subnets": [
              "subnet-06c072e7b0b96dc98",
              "subnet-0e7f3082dd36e7e9c"
            ],
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            },
            "vpc_id": "vpc-031ce1909310b7578",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.lb.aws_security_group.load_balancer",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:890363476833:listener/app/orlando/49fc3c39c36e1cad/2a6fef8250fe1799",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:890363476833:targetgroup/orlando/d137bdadc7939067",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:890363476833:listener/app/orlando/49fc3c39c36e1cad/2a6fef8250fe1799",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:890363476833:loadbalancer/app/orlando/49fc3c39c36e1cad",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.main",
            "module.lb.aws_lb_target_group.main",
            "module.lb.aws_security_group.load_balancer",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:890363476833:targetgroup/orlando/d137bdadc7939067",
            "arn_suffix": "targetgroup/orlando/d137bdadc7939067",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:890363476833:targetgroup/orlando/d137bdadc7939067",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "orlando",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:security-group/sg-08646e8645d4b712b",
            "description": "Allow port 80 TCP inbound to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08646e8645d4b712b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http to ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "orlando-load-balancer",
            "name_prefix": "",
            "owner_id": "890363476833",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "orlando-load-balancer"
            },
            "tags_all": {
              "Name": "orlando-load-balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da04956ed342a631",
            "domain": "vpc",
            "id": "eipalloc-0da04956ed342a631",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-231-141-62.compute-1.amazonaws.com",
            "public_ip": "3.231.141.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "orlando-nat0"
            },
            "tags_all": {
              "Name": "orlando-nat0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8435684bd0986b4",
            "domain": "vpc",
            "id": "eipalloc-0d8435684bd0986b4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-130-77.compute-1.amazonaws.com",
            "public_ip": "34.238.130.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "orlando-nat1"
            },
            "tags_all": {
              "Name": "orlando-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:internet-gateway/igw-02689338cdb763f20",
            "id": "igw-02689338cdb763f20",
            "owner_id": "890363476833",
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            },
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da04956ed342a631",
            "connectivity_type": "public",
            "id": "nat-0fee192217e06c2c5",
            "network_interface_id": "eni-00f443d59d9ea10c7",
            "private_ip": "10.0.0.243",
            "public_ip": "3.231.141.62",
            "subnet_id": "subnet-06c072e7b0b96dc98",
            "tags": {
              "Name": "orlando-0"
            },
            "tags_all": {
              "Name": "orlando-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8435684bd0986b4",
            "connectivity_type": "public",
            "id": "nat-0a77fe5c8c8018ec4",
            "network_interface_id": "eni-05956704f8dce502b",
            "private_ip": "10.0.1.63",
            "public_ip": "34.238.130.77",
            "subnet_id": "subnet-0e7f3082dd36e7e9c",
            "tags": {
              "Name": "orlando-1"
            },
            "tags_all": {
              "Name": "orlando-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:route-table/rtb-051fc46e42e9e7fbe",
            "id": "rtb-051fc46e42e9e7fbe",
            "owner_id": "890363476833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fee192217e06c2c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-private0"
            },
            "tags_all": {
              "Name": "orlando-private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:route-table/rtb-0f5fc835d6cba809a",
            "id": "rtb-0f5fc835d6cba809a",
            "owner_id": "890363476833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a77fe5c8c8018ec4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-private1"
            },
            "tags_all": {
              "Name": "orlando-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:route-table/rtb-0412401d4b87d2760",
            "id": "rtb-0412401d4b87d2760",
            "owner_id": "890363476833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02689338cdb763f20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-public"
            },
            "tags_all": {
              "Name": "orlando-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d009963eb3028e8",
            "route_table_id": "rtb-051fc46e42e9e7fbe",
            "subnet_id": "subnet-0baf3965fafb1bc4f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2efb3e5c9b036d",
            "route_table_id": "rtb-0f5fc835d6cba809a",
            "subnet_id": "subnet-06ec5b90b9609e7e3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7558829f75bcff3",
            "route_table_id": "rtb-0412401d4b87d2760",
            "subnet_id": "subnet-06c072e7b0b96dc98"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f04a8131db7aa890",
            "route_table_id": "rtb-0412401d4b87d2760",
            "subnet_id": "subnet-0e7f3082dd36e7e9c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:subnet/subnet-0baf3965fafb1bc4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baf3965fafb1bc4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890363476833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-private0"
            },
            "tags_all": {
              "Name": "orlando-private0"
            },
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:subnet/subnet-06ec5b90b9609e7e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec5b90b9609e7e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890363476833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-private1"
            },
            "tags_all": {
              "Name": "orlando-private1"
            },
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:subnet/subnet-06c072e7b0b96dc98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c072e7b0b96dc98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890363476833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-public0"
            },
            "tags_all": {
              "Name": "orlando-public0"
            },
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:subnet/subnet-0e7f3082dd36e7e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f3082dd36e7e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890363476833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-public1"
            },
            "tags_all": {
              "Name": "orlando-public1"
            },
            "vpc_id": "vpc-031ce1909310b7578"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890363476833:vpc/vpc-031ce1909310b7578",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd22e50d29e4a5fa",
            "default_route_table_id": "rtb-05c47d3052c4a62e0",
            "default_security_group_id": "sg-00d895c157678b742",
            "dhcp_options_id": "dopt-aae8fcd0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-031ce1909310b7578",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c47d3052c4a62e0",
            "owner_id": "890363476833",
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            }
          }
        }
      ]
    }
  ]
}